...
        <FrameLayout
            android:id="@+id/flRealMainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ablRealMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constRealMainActionBar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <ImageView
                    android:id="@+id/ivRealMainSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/actionBarItemBackground"
                    android:padding="@dimen/dimen_18"
                    android:src="@drawable/ic_search_main_black"
                    app:layout_constraintDimensionRatio="H, 1:1"
...
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/app_name"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/dimen_text_size_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivRealMainProfile"
                    app:layout_constraintStart_toEndOf="@id/ivRealMainSearch"
                    app:layout_constraintTop_toTopOf="parent" />



                <com.google.android.material.imageview.ShapeableImageView
...
