...
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_20"
                    android:paddingVertical="@dimen/dimen_70"
                    app:layout_constraintTop_toBottomOf="@id/vLoginLine">

                    <EditText
                        android:id="@+id/etvLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_56"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_rectangle_gray_bg_corner_30"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/email"
...
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_16">

                        <EditText
                            android:id="@+id/etvLoginPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_56"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_rectangle_gray_bg_corner_30"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="@string/password"
...
                            android:background="?android:attr/actionBarItemBackground"
                            android:src="@drawable/ic_show_password_gray" />

                    </FrameLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_56"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:elevation="0dp"
                        app:cardBackgroundColor="@color/dark_blue"
                        app:cardCornerRadius="@dimen/dimen_corner_30">
...
